...
    }()
    
    //close button
    let btnClose: UIButton = {
        var button = UIButton()
        button.isUserInteractionEnabled = true
        button.setImage(UIImage(named: "close"), for: .normal)
        return button
    }()
    
    //title label
    let titleLabel: UILabel = {
        var label = UILabel()
...
