...
    
    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let cell = tableView.dequeueReusableCell(withIdentifier: "cell", for: indexPath)
        
        if (indexPath.row == 0)
        {
            cell.textLabel?.text = NSLocalizedString("Toutes les catégories", comment: "Toutes les catégories string")
        }else{
            let categorie = self.arrayCategories[indexPath.row-1]
            
            cell.textLabel?.text = categorie.name
        }
        
...
