//
//  AnnouncementsUITests.swift
//  AnnouncementsUITests
//
//  Created by sofiene on 10/10/2021.
//

import XCTest

class AnnouncementsUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
    
    func testApplicationUI() {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        let tablesQuery = app.tables
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Vinyle Elliott Murphy Just A Story From America"]/*[[".cells.staticTexts[\"Vinyle Elliott Murphy Just A Story From America\"]",".staticTexts[\"Vinyle Elliott Murphy Just A Story From America\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.buttons["close"].tap()
        app.buttons["Toutes les catégories"].tap()
    }
}
